28-July-2011 Michael Babker
+ Add options for Facebook Button

27-July-2011 Michael Babker
+ Create the plugin