@@ -3,7 +3,10 @@
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 ; Double quotes in the values have to be formatted as "_QQ_"
 
-COM_PLUGINS_DISPLAY_FIELDSET_LABEL="Buttons to Display"
+COM_PLUGINS_DISPLAY_FIELDSET_LABEL="Display Options"
+COM_PLUGINS_FACEBOOK_FIELDSET_LABEL="Facebook Like Options"
+COM_PLUGINS_GOOGLE_FIELDSET_LABEL="Google +1 Options"
+COM_PLUGINS_TWITTER_FIELDSET_LABEL="Twitter Share Options"
 PLG_CONTENT_YETANOTHERSOCIAL="Content - Yet Another Social Plugin"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_CATEGORIES_DESCRIPTION="Choose the categories to display the selected buttons in"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_DISPLAY_CATEGORIES_LABEL="Category Selection"
@@ -38,4 +41,12 @@ PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_LAYOUT_OPTION_BUTTON="Button"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_LAYOUT_OPTION_STANDARD="Standard"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_SEND_DESCRIPTION="Include a Send button with the Like button"
 PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_FACEBOOK_SEND_LABEL="Show Send Button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_COUNT_DESCRIPTION="Choose to display the number of +1's for the item"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_COUNT_LABEL="Show Count"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_DESCRIPTION="Choose the size of the +1 button"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_LABEL="+1 Button Size"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_OPTION_MEDIUM="Medium"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_OPTION_SMALL="Small"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_OPTION_STANDARD="Standard"
+PLG_CONTENT_YETANOTHERSOCIAL_FIELDSET_GOOGLE_SIZE_OPTION_TALL="Tall"
 PLG_CONTENT_YETANOTHERSOCIAL_XML_DESCRIPTION="Yet Another Social Plugin is a plugin for Joomla! to display Twitter's Share, Google's +1, and Facebook's Like buttons"
