@@ -1,5 +1,6 @@
 28-July-2011 Michael Babker
 + Add options for Facebook Button
++ Add options for Google Button
 
 27-July-2011 Michael Babker
 + Create the plugin
